# cargo-diagnose

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  publish.yml
src/: lib.rs  main.rs  metadata.rs  report.rs
src/api/: crates_io.rs  github.rs  mod.rs  osv.rs
tests/: api_tests.rs  metadata_tests.rs  report_tests.rs
