[package]
name = "cargo-doctor"
version = "0.1.0"
edition = "2024"

[dependencies]
cargo_metadata = "0.23.1"
clap = { version = "4.5.60", features = ["derive"] }
octocrab = "0.49.5"
reqwest = { version = "0.13.2", features = ["json"] }
rustls = { version = "0.23.37", features = ["ring"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
