[package]
name = "cargo-diagnose"
version = "0.1.1"
edition = "2024"
authors = ["Anas Limem"]
description = "A command-line dependency health analyzer for Rust projects, scoring OSV vulnerabilities and GitHub maintenance APIs."
license = "MIT"
readme = "README.md"
repository = "https://github.com/manaslimem/cargo-diagnose"
keywords = ["security", "audit", "dependencies", "cli", "health"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]

[dependencies]
cargo_metadata = "0.23.1"
clap = { version = "4.5.60", features = ["derive"] }
octocrab = "0.49.5"
reqwest = { version = "0.13.2", features = ["json"] }
rustls = { version = "0.23.37", features = ["ring"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
url = "2.5.4"
